refactor and restore syntax highlighting